# smart-bookmarks

./: .gitignore  LICENSE  commands.txt  docker-compose.yaml
smart-bookmarks-django/: .dev.env  .docker.env  .dockerignore  .isort.cfg  .pre-commit-config.yaml  .test.env  Dockerfile  Dockerfile-elasticsearch-head  Dockerfile-nginx  Makefile  activate-dev.bat  docker-compose.yaml  docker-compose.yaml.sample  docker.env  manage.py  pyproject.toml  pytest.ini
smart-bookmarks-django/smart_bookmarks/: celery.py  settings.py  urls.py  wsgi.py
smart-bookmarks-django/smart_bookmarks/api/: serializers.py  urls.py  views.py
smart-bookmarks-django/smart_bookmarks/authentication/: models.py  settings.py
smart-bookmarks-django/smart_bookmarks/bookmarks/: admin.py  db.py  forms.py  models.py  services.py  tests.py  urls.py  views.py
smart-bookmarks-django/smart_bookmarks/core/: admin.py  apps.py  db.py  interfaces.py  models.py  registry.py  services.py  signals.py  tests.py  utils.py
smart-bookmarks-django/smart_bookmarks/importers/: apps.py  netscape.py  services.py
smart-bookmarks-django/smart_bookmarks/scraper/: tasks.py
smart-bookmarks-django/smart_bookmarks/scrapers/: __init__.py  admin.py  apps.py  db.py  models.py  receivers.py  selenium.py  services.py  tasks.py
smart-bookmarks-django/smart_bookmarks/search/: __init__.py  admin.py  apps.py  db.py  elasticsearch.py  models.py  receivers.py  services.py  tasks.py
smart-bookmarks-django/smart_bookmarks/settings/: base.py  dev-docker.py  dev.py  test.py
smart-bookmarks-django/smart_bookmarks/ui/: ajax.py  (+6 more)
(+81 files in other folders)
