[tool.poetry]
name = "smart-bookmarks-django"
version = "0.1.0"
description = ""
authors = ["Tomasz Piwoński <tpiwonski@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
django = "2.2.10"

[tool.poetry.dev-dependencies]
isort = "^4.3.21"
black = "^19.10b0"
mypy = "^0.761"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
